@@ -23,8 +23,9 @@ subtest 'defaults' => sub {
         },
     );
 
-    ok( $tzil->build,                                   "dist built" );
-    ok( !-e $tzil->tempdir->file('source/Makefile.PL'), "no Makefile.PL copied" );
+    ok( $tzil->build, "dist built" );
+    ok( !-e path( $tzil->tempdir )->child('source/Makefile.PL'),
+        "no Makefile.PL copied" );
 };
 
 subtest 'copy Makefile.PL' => sub {
@@ -40,8 +41,8 @@ subtest 'copy Makefile.PL' => sub {
         },
     );
 
-    ok( $tzil->build,                                  "dist built" );
-    ok( -e $tzil->tempdir->file('source/Makefile.PL'), "Makefile.PL copied" );
+    ok( $tzil->build,                                           "dist built" );
+    ok( -e path( $tzil->tempdir )->child('source/Makefile.PL'), "Makefile.PL copied" );
     my $guts = $tzil->slurp_file('source/Makefile.PL');
     unlike( $guts, qr/^#.*(generated by).*$/m, "no 'generated by' line found" );
 };
@@ -59,9 +60,9 @@ subtest 'copy README and Makefile.PL' => sub {
         },
     );
 
-    ok( $tzil->build,                                  "dist built" );
-    ok( -e $tzil->tempdir->file('source/Makefile.PL'), "Makefile.PL copied" );
-    ok( -e $tzil->tempdir->file('source/README'),      "README copied" );
+    ok( $tzil->build,                                           "dist built" );
+    ok( -e path( $tzil->tempdir )->child('source/Makefile.PL'), "Makefile.PL copied" );
+    ok( -e path( $tzil->tempdir )->child('source/README'),      "README copied" );
 };
 
 done_testing;
